<resources>
    <string name="app_name">arrow controller</string>
    <string name="dstAddress">server address</string>
    <string name="connection">Set the connection</string>
    <string name="next">Next</string>
    <string name="connectAction">Connect</string>
    <string name="retryAction">Retry connecting</string>
    <string name="waitMsg">waiting for connection</string>
    <string name="hintAddr">server address</string>
    <string name="defaultAddr">192.168.</string>
    <string name="hintPort">server port</string>
    <string name="defaultPort">20001</string>
    <string name="initPosValue">0.00</string>
    <string name="initThetaValue">0</string>
    <string name="xLabel">X: </string>
    <string name="yLabel">Y: </string>
    <string name="thetaLabel">&#952;:</string>
    <string name="currentPosition">CURRENT POSITION</string>
    <string name="desiredPosition">DESIRED POSITION</string>
    <string name="accept">START THE RIDE</string>
</resources>

